--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@ name: "Affiliates Theme for Jekyll"
 title: "Affiliates Theme for Jekyll"
 description: "Jekyll Theme for Blogging"
 meta_description: "Jekyll theme for blogging."
-logo: 'assets/images/logo.png'
-favicon: 'assets/images/favicon.ico'
+logo: "assets/images/logo.png"
+favicon: "assets/images/favicon.ico"
 paginate: 12
-baseurl: '/'
-email: 'wowthemesnet@gmail.com'
-google_analytics: 'UA-46278016-1'
-disqus: 'demowebsite'
+baseurl: "/"
+email: "wowthemesnet@gmail.com"
+google_analytics: "UA-46278016-1"
+disqus: "demowebsite"
 sharethis: '<script type="text/javascript" src="//platform-api.sharethis.com/js/sharethis.js#property=5a6b2fe4fb197a0011c589f6&product=sticky-share-buttons"></script>'
 
 # Authors
@@ -32,21 +32,22 @@ authors:
     description: "This is the author box. Write a short description of the author here. You are currently previewing Affiliates theme demo, a Jekyll template compatible with Github pages."
 
 # Plugins
-plugins: 
+plugins:
   - jekyll-paginate
   - jekyll-sitemap
   - jekyll-feed
   - jekyll-seo-tag
   - jekyll-archives
-        
+  - jekyll-admin
+
 # Archives
 jekyll-archives:
   enabled:
     - categories
   layout: archive
   permalinks:
-    category: '/category/:name/'
-    
+    category: "/category/:name/"
+
 # Other
 markdown: kramdown
 highlighter: rouge
