--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ paginate: 12
 baseurl: "/"
 email: "wowthemesnet@gmail.com"
 google_analytics: "UA-148043412-1"
-disqus: "demowebsite"
+disqus: "https-jsilvia721-github-io-test"
 sharethis: '<script type="text/javascript" src="//platform-api.sharethis.com/js/sharethis.js#property=5a6b2fe4fb197a0011c589f6&product=sticky-share-buttons"></script>'
 
 # Authors
